Fixed font size issue on mobile; Added landing page

--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,9 @@ h1 {
 a {
   color: brown;
 }
+
+@media screen and (max-width: 800px) {
+  input {
+    font-size: 16px;
+  }
+}
